--- a/literatura.bib
+++ b/literatura.bib
@@ -1,7 +1,7 @@
 @Misc{Top10Flaws,
 author = {Multiple authors},
 title = {Top 10 Flaws},
-howpublished = {\url{https://www.computer.org/cms/CYBSI/docs/Top-10-Flaws.pdf}},
+howpublished = {on-line at: \url{https://www.computer.org/cms/CYBSI/docs/Top-10-Flaws.pdf}},
 }
 
 @Book{BIS,
@@ -14,49 +14,49 @@ year = {2011},
 @Misc{XSS,
 key = {XSS},
 title = {Cross-site Scripting (XSS)},
-howpublished = {\url{https://www.owasp.org/index.php/Cross-site_Scripting_(XSS)}},
+howpublished = {on-line at: \url{https://www.owasp.org/index.php/Cross-site_Scripting_(XSS)}},
 }
 
 @Misc{XSS_prev,
 author = {Jeff Williams and Jim Manico and Neil Mattatall},
 title = {XSS (Cross Site Scripting) Prevention Cheat Sheet},
-howpublished = {\url{https://www.owasp.org/index.php/XSS_(Cross_Site_Scripting)_Prevention_Cheat_Sheet}},
+howpublished = {on-line at: \url{https://www.owasp.org/index.php/XSS_(Cross_Site_Scripting)_Prevention_Cheat_Sheet}},
 }
 
 @Misc{SQL,
 key = {SQL},
 title = {SQL Injection (SQLi)},
-howpublished = {\url{https://www.acunetix.com/websitesecurity/sql-injection/}},
+howpublished = {on-line at: \url{https://www.acunetix.com/websitesecurity/sql-injection/}},
 }
 
 @Misc{SQL_prev,
 author = {Dave Wichers and Jim Manico and Matt Seil and Dhiraj Mishra},
 title = {SQL Injection Prevention Cheat Sheet},
-howpublished = {\url{https://www.owasp.org/index.php/SQL_Injection_Prevention_Cheat_Sheet}},
+howpublished = {on-line at: \url{https://www.owasp.org/index.php/SQL_Injection_Prevention_Cheat_Sheet}},
 }
 
 @Misc{AC,
 key = {AC},
 title = {Access Control Cheat Sheet},
-howpublished = {\url{https://www.owasp.org/index.php/Access_Control_Cheat_Sheet}},
+howpublished = {on-line at: \url{https://www.owasp.org/index.php/Access_Control_Cheat_Sheet}},
 }
 
 @Misc{WS,
 key = {WS},
 title = {Web Server Security and Database Server Security},
-howpublished = {\url{https://www.acunetix.com/websitesecurity/webserver-security/}},
+howpublished = {on-line at: \url{https://www.acunetix.com/websitesecurity/webserver-security/}},
 }
 
 @Misc{AS,
 author = {Michael Coates},
 title = {Application Security},
-OPThowpublished = {\url{https://www.youtube.com/watch?v=sY7pUJU8a7U}},
+OPThowpublished = {on-line at: \url{https://www.youtube.com/watch?v=sY7pUJU8a7U}},
 }
 
 @Misc{Top10,
 key = {Top10},
 title = {Top 10 Project},
-howpublished = {\url{https://www.owasp.org/index.php/Category:OWASP_Top_Ten_Project}},
+howpublished = {on-line at: \url{https://www.owasp.org/index.php/Category:OWASP_Top_Ten_Project}},
 }
 
 @Book{CRYP,
@@ -69,19 +69,26 @@ year = {1995},
 @Misc{Sanit,
 key = {Sanit},
 title = {Validating Sanitizing and Escaping User Data},
-howpublished = {\url{https://codex.wordpress.org/Validating_Sanitizing_and_Escaping_User_Data}},
+howpublished = {on-line at: \url{https://codex.wordpress.org/Validating_Sanitizing_and_Escaping_User_Data}},
 }
 
 @Misc{DoS,
 key = {DoS},
 title = {Denial of Service (DoS) Attacks},
-howpublished = {\url{http://www.webopedia.com/DidYouKnow/Internet/DoS_attack.asp}},
+howpublished = {on-line at: \url{http://www.webopedia.com/DidYouKnow/Internet/DoS_attack.asp}},
 }
 
 @Misc{DoSM,
 key = {DoSM},
 author = {Malkov Saša},
 title = {Bezbednost Veb Aplikacija},
-howpublished = {\url{http://poincare.matf.bg.ac.rs/~smalkov/files/pveb.r338.2016/public/predavanja/PVeb.2014.08%20-%20bezbednost.pdf}},
+howpublished = {on-line at:\url{http://poincare.matf.bg.ac.rs/~smalkov/files/pveb.r338.2016/public/predavanja/PVeb.2014.08%20-%20bezbednost.pdf}},
+}
+
+@Misc{VEB,
+key = {VEB},
+author = {Tim O'Reilly},
+title = {What Is Web 2.0},
+howpublished = {on-line at: \url{http://www.oreilly.com/pub/a/web2/archive/what-is-web-20.html}},
 }
 
